--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darwin_Relax</title>
-    <link rel="icon" type="image/png" sizes="16x16" a href="./img/img de masaje.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" a href="./img/1000_F_136401657_ml40mQdZKOGEUv0qevenTlVx2c1jQa12.jpg">
     <link rel="stylesheet" href="./stilos.css/stilos.css">
 </head>
 <body id="body__grid">
@@ -32,7 +32,7 @@
                 <div id="imagen">
                     <img src="./img/fotowalter.jpg" alt="foto walter" class="imagen__foto">
                     <video controls autoplay loop class="imagen__video">
-                        <source src="./video/istock-635808704_preview.mp4" type="video/mp4">
+                        <source src="./video/pexels-olia-danilevich-9335886.mp4" type="video/mp4">
                     </video>
                 </div> 
                 <div id="resert"> 
