--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -7,25 +7,22 @@
     <title>Darwin Contactos</title>
     <link rel="icon" type="image/png" sizes="16x16" a href="../img/img de masaje.jpg">
     <link rel="stylesheet" href="../stilos.css/stilos.css">
-
 </head>
-<body>
-    <header class="head" id="head__index">
-        <nav>
-            <div class="head__nav__principal">
-                <div class="head__nav__principal__titulo">
-                    <img src="../img/img de masaje.jpg" alt="masaje">
-                    <h1>DARWIN_Relax</h1>
-                    <p class="head__nav__principal__titulo__p">EQUILIBRIO - RELAJACION</p>
-                </div>    
-                <div class="nav">
-                    <ul class="link">
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="./servicios.html">Servicios</a></li>
-                        <li><a href="./tarifas.html">Reserva-Tarifas</a></li>
-                        <li><a href="./sobre_mi.html">Sobre Mi</a></li>
-                    </ul>
-                </div>
+<body id="body__grid">
+    <header class="head">
+        <nav class="head__nav">
+            <div class="head__nav__titulo">
+                <img src="../img/img de masaje.jpg" alt="masaje">
+                <h1 class="t-center">DARWIN_Relax</h1>
+                <p class="t-center">EQUILIBRIO - RELAJACION</p>
+            </div>    
+            <div class="head__nav__link">
+                <ul class="link t-center">
+                    <li><a href="./pages/contactos.html">Contactos</a></li>
+                    <li><a href="./pages/sobre_mi.html">Sobre Mi</a></li>
+                    <li><a href="./pages/tarifas.html">Reserva-Tarifas</a></li>
+                    <li><a href="./pages/servicios.html">Servicios</a></li>
+                </ul>
             </div>
         </nav>
     </header>
