--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -62,44 +62,13 @@
             </div>
         </form>
     </main>
-    <footer class="footermi">
+    <footer id="footer">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
-            <div class="footermi__div">
-                <a href="#">Volver al Inicio</a>
-                <div class="footer__div__img"><a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a></div>
+            <div class="footer__div">
+                <span><a href="#head__index">Volver al Inicio</a></span>
+                <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a></div>
             </div>    
     </footer>
 </body>
 </html>
 
-#servicios{
-    height: auto
-    width: 50vw;
-}
-.headservi {
-    display: flex;
-    justify-content: space-between;
-    background-image: url(../img/img\ head\ 1.jpg);
-    background-size:contain;
-    background-repeat:round no-repeat;
-    border-bottom: 5px solid rgb(121, 179, 140);
-}
-.headservi img{
-    margin: 3px;
-}
-.headservi h1{
-    text-align: center;
-    margin:10px
-    padding: 100px;
-    font-family: 'Dancing Script', cursive;
-    font-size: 50px;
-    color: rgb(34, 216, 237);
-}
-.headservi p{
-    text-align: center;
-    color:rgb(34, 216, 237);
-    font-family: 'Dancing Script', cursive;
-    font-size: 15px;
-    padding-top: 180PX;
-    margin-right: 100px;
-}
