modificaciones_footer_contacto_servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,28 +8,29 @@
     <link rel="icon" type="image/png" sizes="16x16" a href="../img/img de masaje.jpg">
     <link rel="stylesheet" href="../stilos.css/stilos.css">
 </head>
-<body>
-    <header class="head" id="head__index">
-        <nav>
-            <div class="head__nav__principal">
-                <div class="head__nav__principal__titulo">
-                    <img src="../img/img de masaje.jpg" alt="masaje">
-                    <h1>DARWIN_Relax</h1>
-                    <p class="head__nav__principal__titulo__p">EQUILIBRIO - RELAJACION</p>
-                </div>    
-                <div class="nav">
-                    <ul class="link">
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="./tarifas.html">Reserva-Tarifas</a></li>
-                        <li><a href="./sobre_mi.html">Sobre Mi</a></li>
-                        <li><a href="./contactos.html">Contactos</a></li>
-                    </ul>
-                </div>
+<body id="body__grid">
+    <header class="head">
+        <nav class="head__nav">
+            <div class="head__nav__titulo">
+                <img src="../img/img de masaje.jpg" alt="masaje">
+                <h1 class="t-center">DARWIN_Relax</h1>
+                <p class="t-center">EQUILIBRIO - RELAJACION</p>
+            </div>    
+            <div class="head__nav__link">
+                <ul class="link t-center">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./tarifas.html">Reserva-Tarifas</a></li>
+                    <li><a href="./sobre_mi.html">Sobre Mi</a></li>
+                    <li><a href="./contactos.html">Contactos</a></li>
+                </ul>
             </div>
-         </nav>
+        </nav>
     </header>
-    <main class="mainser">
-        <h2>Nuestros Servicios</h2>
+    <main id="servicios">
+        <h2 class="t-center">Nuestros Servicios</h2>
+        <div>
+            <p>EXPERIMENTA LOS MULTIPLES BENEFICIOS DE LOS MASAJES RELAJANTES.RESERVA TU TURNO Y VENI A PASAR UN MOEMTNO DE RELAJACION Y DESCONEXION PARA TU CUERPO.</p>
+        </div>
         <ul class="tipser">
             <li><a href="">Relajantes</a>
                 <ul>
@@ -61,11 +62,11 @@
             </li>
         </ul>
     </main>
-    <footer class="footermi">
+    <footer id="footer">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
-            <div class="footermi__div">
-                <a href="#">Volver al Inicio</a>
-                <div class="footermi__div__img"><a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a></div>
+            <div class="footer__div">
+                <span><a href="#head__index">Volver al Inicio</a></span>
+                <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a></div>
             </div>    
     </footer>
 <body>
