--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -18,10 +18,10 @@
             </div>    
             <div class="head__nav__link">
                 <ul class="link t-center">
-                    <li><a href="./pages/contactos.html">Contactos</a></li>
-                    <li><a href="./pages/sobre_mi.html">Sobre Mi</a></li>
-                    <li><a href="./pages/tarifas.html">Reserva-Tarifas</a></li>
-                    <li><a href="./pages/servicios.html">Servicios</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./tarifas.html">Reserva-Tarifas</a></li>
+                    <li><a href="./sobre_mi.html">Sobre Mi</a></li>
+                    <li><a href="./servicios.html">Servicios</a></li>
                 </ul>
             </div>
         </nav>
