--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section> 
             <article>
                 <div id="imagen">
@@ -47,9 +47,9 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
                 <div class="footer__div">
                     <span><a href="#head__index">Volver al Inicio</a></span>
-                    <div class="footer_div__a">
-                        <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a>
-                        <a href="https://ar.linkedin.com/" target="_blank"><img src="https://images.unsplash.com/photo-1611944212129-29977ae1398c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bG9nb3RpcG8lMjBkZSUyMGxpbmtlZGlufGVufDB8fDB8fA%3D%3D&w=1000&q=80"></a>
+                    <div class="footer__div__a">
+                        <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
+                        <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
                         <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
                     </div>
                 </div>    
