--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -66,7 +66,11 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
             <div class="footer__div">
                 <span><a href="#head__index">Volver al Inicio</a></span>
-                <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a></div>
+                <div class="footer__div__a">
+                    <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
+                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
+                    <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
+                </div>
             </div>    
     </footer>
 </body>             
