--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darwin Sobre MI</title>
+    <link rel="icon" type="image/png" sizes="16x16" a href="../img/1000_F_136401657_ml40mQdZKOGEUv0qevenTlVx2c1jQa12.jpg">
     <!-- BOOSTRAP-->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" sizes="16x16" a href="../img/img de masaje.jpg">
     <!-- CSS MAIN-->
     <link rel="stylesheet" href="../stilos.css/stilos.css">
 </head>
@@ -34,7 +34,8 @@
     </header>
     <main class="main">
         <section>   
-            <h2 class="t-center text-primary"><strong>NUESTROS SERVICIOS Y LOS BENEFICIOS DE LOS MASAJES</strong></h2>
+            <h2 class="t-center text-primary"><strong>NUESTROS SERVICIOS</strong></h2>
+            <p class="text-center text-light">Los benefecios que brindan cada uno de nuestros masajes</p>
             <div class="accordion container" id="accordionExample">
                 <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
@@ -134,6 +135,9 @@
                     <div class="carousel-item tamanio_img">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRfa6wwS0pzHGOBWae0zn91c3MZ_Nmz5u6mA&usqp=CAU" class="d-block w-100 h-100" alt="VENDAS FRIAS">
                     </div>
+                    <div class="carousel-item tamanio_img">
+                        <img src="https://www.saludterapia.com/images/saludterapia/glosario/masaje-relajante/xmasaje-relajante.jpg.pagespeed.ic.3X9hTla7YJ.webp" class="d-block w-100 h-100" alt="VENDAS FRIAS">
+                    </div>
                 </div> 
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -148,14 +152,18 @@
     </main>
     <footer id="footer">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
-            <div class="footer__div">
-                <span><a href="#head__index">Volver al Inicio</a></span>
-                <div class="footer__div__a">
-                    <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
-                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
-                    <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
+        <div class="footer__div">
+            <div class="card">
+                <div class="card-body">
+                  <a href="#head__servicios" class="btn btn-primary">INICIO</a>
                 </div>
-            </div>    
+            </div>
+            <div class="footer__div__a">
+                <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
+                <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
+                <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
+            </div>
+        </div>    
     </footer>
 </body>
 </html>
