--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darwin Sobre MI</title>
+    <link rel="icon" type="image/png" sizes="16x16" a href="../img/1000_F_136401657_ml40mQdZKOGEUv0qevenTlVx2c1jQa12.jpg">
     <!-- BOOSTRAP-->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" sizes="16x16" a href="../img/img de masaje.jpg">
     <!-- CSS MAIN-->
     <link rel="stylesheet" href="../stilos.css/stilos.css">
 </head>
@@ -35,27 +35,27 @@
     <main class="main">
         <section>
             <div class="text-light">
-                <h2 class="t-center">Walter Daniel Altamirano</h2>
+                <h2 class="t-center text-primary"><strong>Walter Daniel Altamirano</strong></h2>
             </div>
             <article>
                 <div class="container text-center">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quaerat! Deleniti voluptatem provident assumenda deserunt. Possimus, tempore, autem animi laboriosam perferendis quasi obcaecati eligendi a necessitatibus, beatae at quam. Deserunt.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione ea numquam fugit et provident, eius earum delectus vel enim cumque suscipit atque itaque incidunt, quas doloribus porro repudiandae, ut aperiam?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione ea numquam fugit et provident, eius earum delectus vel enim cumque suscipit atque itaque incidunt, quas doloribus porro repudiandae, ut aperiam?</p>
+                        <div class="col-sm-12 col-md-6 p-3 mb-2 bg-primary bg-opacity-50">
+                            <p class=" text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quaerat! Deleniti voluptatem provident assumenda deserunt. Possimus, tempore, autem animi laboriosam perferendis quasi obcaecati eligendi a necessitatibus, beatae at quam. Deserunt.</p>
+                            <p class=" text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione ea numquam fugit et provident, eius earum delectus vel enim cumque suscipit atque itaque incidunt, quas doloribus porro repudiandae, ut aperiam?</p>
+                            <p class=" text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione ea numquam fugit et provident, eius earum delectus vel enim cumque suscipit atque itaque incidunt, quas doloribus porro repudiandae, ut aperiam?</p>
                         </div>
                         <div class="col-sm-12 col-md-6">
-                            <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
+                            <div id="carouselExampleControls" class="carousel slide container tamanio_img" data-bs-ride="carousel">
                                 <div class="carousel-inner">
-                                  <div class="carousel-item active">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                  <div class="carousel-item active tamanio_img">
+                                    <img src="../img/fotowalter.jpg" class="d-block w-100 h-100" alt="diploma">
                                   </div>
-                                  <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                  <div class="carousel-item tamanio_img">
+                                    <img src="../img/diploma (2).jpeg" class="d-block w-100 h-100" alt="diploma">
                                   </div>
-                                  <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                  <div class="carousel-item tamanio_img">
+                                    <img src="../img/diploma (1).jpeg" class="d-block w-100 h-100" alt="diploma">
                                   </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -66,20 +66,27 @@
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Next</span>
                                 </button>
-                            </div>                      
-                    </div>
-        </section>
+                            </div>  
+                        </div>   
+                    </div> 
+                </div>
+            </article>           
+         </section>
     </main>
-       <footer id="footer">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
-                <div class="footer__div">
-                    <span><a href="#head__index">Volver al Inicio</a></span>
-                    <div class="footer__div__a">
-                        <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
-                        <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
-                        <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
-                    </div>
-                </div>    
-        </footer>
+    <footer id="footer">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
+        <div class="footer__div">
+            <div class="card">
+                <div class="card-body">
+                    <a href="#head__index" class="btn btn-primary">INICIO</a>
+                </div>
+            </div>
+            <div class="footer__div__a">
+                <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
+                <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
+                <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
+            </div>
+        </div> 
+    </footer>
 </body>
 </html>
