--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darwin Reserva-Tarifas</title>
-    <link rel="icon" type="image/png" sizes="16x16" a href="../img/img de masaje.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" a href="../img/1000_F_136401657_ml40mQdZKOGEUv0qevenTlVx2c1jQa12.jpg">
+    <!-- BOOSTRAP-->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!-- CSS MAIN-->
     <link rel="stylesheet" href="../stilos.css/stilos.css">
 </head>
 <body>
-    <header class="head" id="head__index">
-        <nav>
-            <div class="head__nav__principal">
-                <div class="head__nav__principal__titulo">
+    <body id="body__grid">
+        <header class="head">
+            <nav class="head__nav">
+                <div class="head__nav__titulo">
                     <img src="../img/img de masaje.jpg" alt="masaje">
-                    <h1>DARWIN_Relax</h1>
-                    <p class="head__nav__principal__titulo__p">EQUILIBRIO - RELAJACION</p>
+                    <h1 class="t-center">DARWIN_Relax</h1>
+                    <p class="t-center">EQUILIBRIO - RELAJACION</p>
                 </div>    
-                <div class="nav">
-                    <ul class="link">
+                <div class="head__nav__link">
+                    <ul class="link t-center">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="./servicios.html">Servicios</a></li>
                         <li><a href="./sobre_mi.html">Sobre Mi</a></li>
@@ -28,100 +34,108 @@
             </div>
         </nav>
     </header>    
-<main>
-    <div class="reservas">
-        <div  class="divprincipal">
-                <h2>Reserva tu Turno</h2>
-                <h3>Datos Personales</h3>
-            <form class="div__label">
-                <div>
+    <main>
+        <div class="reservas">
+            <div  class="divprincipal">
+                    <h2>Reserva tu Turno</h2>
+                    <h3>Datos Personales</h3>
+                <form class="div__label">
                     <div>
-                        <label for="nombre">Nombre y Apellido</label>
-                        <input type="text" name="nombre" id="nombre" placeholder="Tu Nombre y Apellido" required>
-                        <label for="telefono">Telefono</label>
-                        <input type="number" name="telefono" id="telefono" placeholder="Tu Telefono" required>
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="tu E-mail">
-                        <p>Que de Servicio Buscas</p>
-                        <span>Consultorio</span>
-                        <input type="radio" name="servicio" id="consultario">
-                        <span>Domicilio</span>
-                        <input type="radio" name="servicio" id="domicilio">
+                        <div>
+                            <label for="nombre">Nombre y Apellido</label>
+                            <input type="text" name="nombre" id="nombre" placeholder="Tu Nombre y Apellido" required>
+                            <label for="telefono">Telefono</label>
+                            <input type="number" name="telefono" id="telefono" placeholder="Tu Telefono" required>
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email" placeholder="tu E-mail">
+                            <p>Que de Servicio Buscas</p>
+                            <span>Consultorio</span>
+                            <input type="radio" name="servicio" id="consultario">
+                            <span>Domicilio</span>
+                            <input type="radio" name="servicio" id="domicilio">
+                        </div>
+                        <div>
+                            <label for="edad">Edad</label>
+                            <input type="number" name="edad" id="edad" placeholder="Tu Edad" required>
+                        </div>
+                        <div>
+                            <label for="peso">Peso</label>
+                            <input type="number" name="peso" id="peso" placeholder="Tu Peso" required>
+                        </div>
+                        <div>
+                            <span>Enfermedades</span>
+                            <select name="select">
+                                <option value="opcion"></optin>
+                                <option value="opcion">Algun tipo de tumor</optin>
+                                <option value="opcion">Presión Alta</optin>
+                                <option value="opcion">Presión Baja</optin>
+                                <option value="opcion">Berrugas</optin>
+                                <option value="opcion">Hongos</optin>
+                                <option value="opcion">Varices</optin>
+                                <option value="opcion">Otras</optin>
+                                <option value="opcion">Ninguna</optin>
+                            </select>    
+                        </div>
+                        <div>
+                            <span>Tatuajes</span>
+                                <select name="tatuajes">
+                                    <option value="si">si</option>
+                                    <option value="si">no</optin>
+                                </select>
+                        </div>
+                        <div class="value">
+                            <input type="submit" value="Enviar">
+                            <input type="submit" value="Reset">
+                        </div>
                     </div>
-                    <div>
-                        <label for="edad">Edad</label>
-                        <input type="number" name="edad" id="edad" placeholder="Tu Edad" required>
-                    </div>
-                    <div>
-                        <label for="peso">Peso</label>
-                        <input type="number" name="peso" id="peso" placeholder="Tu Peso" required>
-                    </div>
-                    <div>
-                        <span>Enfermedades</span>
-                        <select name="select">
-                            <option value="opcion"></optin>
-                            <option value="opcion">Algun tipo de tumor</optin>
-                            <option value="opcion">Presión Alta</optin>
-                            <option value="opcion">Presión Baja</optin>
-                            <option value="opcion">Berrugas</optin>
-                            <option value="opcion">Hongos</optin>
-                            <option value="opcion">Varices</optin>
-                            <option value="opcion">Otras</optin>
-                            <option value="opcion">Ninguna</optin>
-                        </select>    
-                    </div>
-                    <div>
-                        <span>Tatuajes</span>
-                            <select name="tatuajes">
-                                <option value="si">si</option>
-                                <option value="si">no</optin>
-                            </select>
-                    </div>
-                    <div class="value">
-                        <input type="submit" value="Enviar">
-                        <input type="submit" value="Reset">
+                </form>
+            </div>   
+            <div class="tabla">
+                <table border="" bgcolor="grey" with="900">
+                    <tr> 
+                        <th bgcolor="red" with="100">Tipos de masajes</th>
+                        <th bgcolor="red" with="100">$x 30 minutos</th>
+                        <th bgcolor="red" with="100">$x 50 minutos</th>
+                    </tr>
+                    <tr>
+                        <th with="100">Relajante</th>
+                        <th with="100">$2000</th>
+                        <th with="100">$2500</th>
+                    </tr>
+                    <tr>
+                        <th with="100">Descontracturante</th>
+                        <th with="100">$2500</th>
+                        <th with="100">$3000</th>
+                    </tr>
+                    <tr>
+                        <th with="100">Sedativos</th>
+                        <th with="100">$2000</th>
+                        <th with="100">$2200</th>
+                    </tr>
+
+                    <tr>
+                        <th with="100">Vendas Frias</th>
+                        <th with="100">$2000</th>
+                        <th with="100">$2200</th>
+                    </tr>
+                </table>
+            </div>
+        </div>  
+    </main>
+    <footer id="footer">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
+            <div class="footer__div">
+                <div class="card">
+                    <div class="card-body">
+                        <a href="#head__index" class="btn btn-primary">INICIO</a>
                     </div>
                 </div>
-            </form>
-        </div>   
-        <div class="tabla">
-            <table border="" bgcolor="grey" with="900">
-                <tr> 
-                    <th bgcolor="red" with="100">Tipos de masajes</th>
-                    <th bgcolor="red" with="100">$x 30 minutos</th>
-                    <th bgcolor="red" with="100">$x 50 minutos</th>
-                </tr>
-                <tr>
-                    <th with="100">Relajante</th>
-                    <th with="100">$2000</th>
-                    <th with="100">$2500</th>
-                </tr>
-                <tr>
-                    <th with="100">Descontracturante</th>
-                    <th with="100">$2500</th>
-                    <th with="100">$3000</th>
-                </tr>
-                <tr>
-                    <th with="100">Sedativos</th>
-                    <th with="100">$2000</th>
-                    <th with="100">$2200</th>
-                </tr>
-
-                <tr>
-                    <th with="100">Vendas Frias</th>
-                    <th with="100">$2000</th>
-                    <th with="100">$2200</th>
-                </tr>
-            </table>
-        </div>
-    </div>  
-</main>
-<footer class="footer">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
-        <div class="footer__div">
-            <a href="#head__index">Volver al Inicio</a>
-            <div class="footer__div__img"><a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a></div>
-        </div>    
-</footer>
+                <div class="footer__div__a">
+                    <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
+                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
+                    <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
+                </div>
+            </div>    
+    </footer>
 </body>
 </html>
