--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -34,38 +34,38 @@
     </header>
     <main class="main">
         <section>
-            <h2>Dejanos tus datos para contactarte</h2>
+            <h2 class="text-primary">Dejanos tus datos para contactarte</h2>
             <div class="row">
-                <div id="principal" class="col-sm-12 col-md-7">
-                    <div class="mb-3 col-sm-12 col-md-7">
-                        <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
+                <div id="principal" class="col-sm-12 col-md-6">
+                    <div class="mb-3 col-sm-12 col-md-6">
+                        <label for="exampleFormControlInput1" class="form-label text-primary">Nombre y Apellido</label>
                         <input type="nombre_apellido" class="form-control" id="exampleFormControlInput1" placeholder="Tu Nombre" required>
                     </div>
-                    <div class="mb-3 col-sm-12 col-md-7">
-                        <label for="exampleFormControlInput1" class="form-label">Telefono de Contacto</label>
+                    <div class="mb-3 col-sm-12 col-md-6">
+                        <label for="exampleFormControlInput1" class="form-label text-primary">Telefono de Contacto</label>
                         <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Tu Numero" required> 
                     </div>           
-                    <div class="mb-3 col-sm-12 col-md-7">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <div class="mb-3 col-sm-12 col-md-6">
+                        <label for="exampleFormControlInput1" class="form-label text-primary">Email address</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                     </div>
-                    <div class="contacto__servicio col-sm-12 col-md-7">
-                        <p>Que de Servicio Buscas</p>
-                        <span>Consultorio</span>
+                    <div class="contacto__servicio col-sm-12 col-md-6">
+                        <p class="text-primary">Que de Servicio Buscas</p>
+                        <span class="text-primary">Consultorio</span>
                         <input type="radio" name="servicio" id="consultario">
-                        <span>Domicilio</span>
+                        <span class="text-primary">Domicilio</span>
                         <input type="radio" name="servicio" id="domicilio">
                     </div>
-                    <div class="mb-3 col-sm-12 col-md-7">
-                        <label for="exampleFormControlTextarea1" class="form-label h5">DEJANOS TU CONSULTA</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <div class="mb-3 col-sm-12 col-md-6">
+                        <label for="exampleFormControlTextarea1" class="form-label h5 text-primary">DEJANOS TU CONSULTA</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Dejanos tu Consulta"></textarea>
                     </div>
                     <div class="contacto__boton">
                         <input type="submit" value="Enviar">
                         <input type="submit" value="Reset">
                     </div>   
                 </div>
-                <div class="col-sm-12 col-md-5 position-relative animacion">
+                <div class="col-sm-12 col-md-6 position-relative animacion">
                     <div class="position-absolute bottom-50 end-50 d-none d-md-block"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5i2A-6tDBF1YYICOfeWa6GMiCQUav9BLjeQ&usqp=CAU"  alt=""></div>
                 </div>
             </div>           
